1.add app icon for android&ios 2.add launch_image when the app(android) init 3.create a higher order component (backHandler) to fix android backHandler
// TODO: add launch_image when the app(ios) init

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">piaopiao</string>
+    // here is your appName,i named it as `rn-0.57.0`
+    <string name="app_name">rn-0.57.0</string>
 </resources>
