--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">VExldb6rvFEVPm_ha6Q2P0ppgX_fdfa0035d-dcd4-405d-8209-dad1033274e1</string>
     // here is your appName,i named it as `rn-0.57.0`
     <string name="app_name">rn-0.57.0</string>
 </resources>
